@@ -1,3 +1,7 @@
+2003-03-14	fabian
+    * Decrease the brightness of default color to give it
+      more contrast to the highlight
+      
 2003-03-13	fabian
     * Added a new option to allow opening the address book
       window when startup.
